[Fix] cm040 공통코드 관리, 좌측 영역 text-overflow: ellipsis; 추가, hr010 등급 css 변경

--- a/hcnc_init/src/main/resources/static/css/ui-style.css
+++ b/hcnc_init/src/main/resources/static/css/ui-style.css
@@ -300,7 +300,7 @@ input, select, textarea {
     line-height: 30px;
     border:1px solid #DEE2E7;
     padding:0 10px; 
-    border-radius:4px; 
+    border-radius:6px;
     color:#333333;
     background:#fff;
     height: 40px;
@@ -338,7 +338,6 @@ select {
     background: url(../images/common/ico-arrow-down.png) calc(100% - 10px) center no-repeat;
     background-size:14px;
     border:1px solid #D9D9D9;
-    border-radius:4px;
     /*min-width:242px; */
 }
 select:disabled {
